# FarlorEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json
Core/: Engine.cpp  Engine.h  KeyboardButtons.h  MouseButtons.h  SettingVar.h  Timer.cpp  Timer.h  Win32Window.cpp  Win32Window.h  Window.h  WindowEvents.h
Core/Events/: ButtonEvent.cpp  ButtonEvent.h  ControllerConnectionEvent.cpp  ControllerConnectionEvent.h  EventListener.h  EventManager.cpp  EventManager.h  KeyboardEvent.cpp  KeyboardEvent.h
Core/Memory/: BaseAllocator.cpp  BaseAllocator.h  LinearAllocator.cpp  LinearAllocator.h  MemoryAlignmentUtils.h  PoolAllocator.cpp  PoolAllocator.h  ProxyAllocator.cpp  ProxyAllocator.h  StackAllocator.cpp  StackAllocator.h
ECS/: Entity.h  EntityManager.cpp  EntityManager.h  TransformManager.cpp  TransformManager.h
Input/: ControllerButton.h  ControllerManager.cpp  ControllerManager.h  InputProcessor.h  InputStateManager.cpp  InputStateManager.h  KeyboardButton.h  Keys.h  MouseButton.h
Networking/: Packet.cpp  Packet.h
NewRenderer/: CBs.h  Camera.cpp  Camera.h  ComputePipelineState.cpp  ComputePipelineState.h  DebugNameUtil.h  DesertModels.h  GraphicsPipelineState.cpp  GraphicsPipelineState.h  LargeScaleDesertModel.cpp  LargeScaleDesertModel.h  LargeScaleDesertModel_Rasterization.cpp  LargeScaleDesertModel_Rasterization.h  LightComponents.h  ManagedConstantBuffer.h  ManagedTexture2D.h  Mesh.cpp  Mesh.h  RenderTarget.h  Renderer.cpp  Renderer.h  ScalarField2D.cpp  ScalarField2D.h  Shader.cpp  Shader.h  SmallScaleDesertModel.cpp  SmallScaleDesertModel.h  Vertex.cpp  Vertex.h
NewRenderer/D3D11/: D3D11_Utils.cpp  D3D11_Utils.h
NewRenderer/Desertscape/: basics.h  noise.h  vec.h
Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Tools/: CMakeLists.txt  ExrMipGenerator.cpp
Util/: HashedString.cpp  HashedString.h  Logger.h  StringUtil.cpp
dependencies/: CMakeLists.txt
